<resources>
    <string name="app_name">Sundry Notes</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>

    <string name="onboarding_slide1_title">Step 1</string>
    <string name="onboarding_slide1_subtitle">Create Category</string>
    <string name="onboarding_slide1_desc">Create a new category to organize your content.</string>

    <string name="onboarding_slide2_title">Step 2</string>
    <string name="onboarding_slide2_subtitle">Create Task/Note</string>
    <string name="onboarding_slide2_desc">Create a new task and set a due date to manage your to-do list.</string>

    <string name="onboarding_slide3_title">Step 3</string>
    <string name="onboarding_slide3_subtitle">View/Update the content</string>
    <string name="onboarding_slide3_desc">View or update details of an existing category/task/note.</string>

    <string name="menu_pin">Pin</string>
    <string name="menu_notify">Notify</string>
    <string name="menu_archive">Archive</string>


    <string name="google_maps_key">AIzaSyAnmR9GRd_QsVC_bcietumIL8CLBWaZPBo</string>
    <string name="task_image">Task image</string>
    <string name="title_row">Title</string>
    <string name="category_row">Category</string>
    <string name="description_row">Description</string>
    <string name="due_date_row">Due Date</string>
    <string name="pick_sort_option">Pick Sort Option</string>
    <string name="search">Search...</string>
    <string name="complete">Completed</string>
</resources>

