<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="3dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F8F8F8"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:paddingHorizontal="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/task_image"
                    app:srcCompat="@drawable/ic_task" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:textStyle="bold"
                        android:text="@string/title_row"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:paddingTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/description_row"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/description_row"
                            android:textColor="@color/black"
                            android:layout_weight="1"
                            android:textSize="18sp" />
                        <TextView
                            android:id="@+id/category_row"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:backgroundTint="@color/theme_color"
                            android:textAlignment="textEnd"
                            android:text="@string/category_row"
                            android:paddingStart="8dp"
                            android:textColor="#999999"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/due_date_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:text="@string/due_date_row"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/check_box"
                android:visibility="gone"
                android:src="@drawable/ic_item_select"
                />
        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>